Update founder information, location, and social links

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ورگا | تولیدکننده تخصصی خاک پوششی قارچ</title>
-    <meta name="description" content="برند ورگا، پیشرو در تولید خاک پوششی پاستوریزه و استریل برای پرورش قارچ با بهره‌گیری از تکنولوژی‌های روز دنیا.">
+    <meta name="description"
+        content="برند ورگا، پیشرو در تولید خاک پوششی پاستوریزه و استریل برای پرورش قارچ با بهره‌گیری از تکنولوژی‌های روز دنیا.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- Using a Persian font CDN for better aesthetics -->
-    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
+        type="text/css" />
     <link rel="stylesheet" href="css/style.css">
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
+
 <body>
     <nav class="navbar">
         <div class="container navbar-content">
@@ -23,7 +27,8 @@
             <ul class="nav-links">
                 <li><a href="#home">صفحه اصلی</a></li>
                 <li><a href="#about">خاک پوششی چیست؟</a></li>
-                <li><a href="#factory">کارخانه و فرآیند</a></li>
+                <li><a href="#founder">درباره ما</a></li>
+                <li><a href="#factory">کارخانه</a></li>
                 <li><a href="#contact">تماس با ما</a></li>
             </ul>
             <div class="nav-cta">
@@ -37,13 +42,15 @@
         <div class="container hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">توازن طبیعت و تکنولوژی در <span class="accent">ورگا</span></h1>
-                <p class="hero-subtitle">تولیدکننده تخصصی خاک پوششی قارچ با استانداردهای جهانی و فرآیند پاستوریزاسیون پیشرفته.</p>
+                <p class="hero-subtitle">تولیدکننده تخصصی خاک پوششی قارچ با استانداردهای جهانی و فرآیند پاستوریزاسیون
+                    پیشرفته.</p>
                 <div class="hero-meaning">
                     <div class="meaning-icon">
                         <i data-lucide="droplets"></i>
                     </div>
                     <div class="meaning-text">
-                        <strong>معنای ورگا:</strong> در گویش اصیل خوانساری (پهلوی)، ورگا به معنی محل تقسیم آب از جوی اصلی به فرعی در زمین‌های کشاورزی است؛ نقطه‌ای حیاتی برای حیات و رشد.
+                        <strong>معنای ورگا:</strong> در گویش اصیل خوانساری (پهلوی)، ورگا به معنی محل تقسیم آب از جوی
+                        اصلی به فرعی در زمین‌های کشاورزی است؛ نقطه‌ای حیاتی برای حیات و رشد.
                     </div>
                 </div>
                 <div class="hero-btns">
@@ -53,7 +60,8 @@
             </div>
             <div class="hero-visual">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1504198453319-5ce911baf2ef?auto=format&fit=crop&q=80&w=800" alt="Mushroom Growing" class="floating-img">
+                    <img src="https://images.unsplash.com/photo-1504198453319-5ce911baf2ef?auto=format&fit=crop&q=80&w=800"
+                        alt="Mushroom Growing" class="floating-img">
                 </div>
             </div>
         </div>
@@ -63,7 +71,7 @@
         <div class="container text-center">
             <h2 class="section-title">خاک پوششی؛ فراتر از یک بستر ساده</h2>
             <p class="section-desc">خاک پوششی منبع تغذیه نیست، بلکه محیطی استراتژیک برای تحریک قارچ به باردهی است.</p>
-            
+
             <div class="features-grid">
                 <div class="feature-card">
                     <i data-lucide="waves"></i>
@@ -84,26 +92,57 @@
         </div>
     </section>
 
+    <section id="founder" class="founder-section">
+        <div class="container grid-2">
+            <div class="founder-image">
+                <img src="https://images.unsplash.com/photo-1556761175-b413da4baf72?auto=format&fit=crop&q=80&w=800"
+                    alt="مهندس سید فرشید میرشفیعی" class="rounded-img shadow-lg">
+            </div>
+            <div class="founder-content">
+                <h2 class="section-title text-right">درباره مؤسس و هدف ورگا</h2>
+                <p><strong>مهندس سید فرشید میرشفیعی</strong>، فارغ‌التحصیل رشته مهندسی معدن، با بیش از ۱۵ سال سابقه
+                    حرفه‌ای در صنعت پرورش قارچ و تجربه مستقیم در بیش از ۱۰۰۰ دوره کشت، بنیان‌گذار برند ورگا هستند. ایشان
+                    با سابقه همکاری گسترده با تمامی برندهای مطرح کمپوست و خاک پوششی، درک عمیقی از ظرافت‌های این حرفه کسب
+                    نموده‌اند.</p>
+                <p>با توجه به اینکه خاک پوششی نقش تعیین‌کننده‌ای در کیفیت و میزان برداشت دارد، ورگا با هدف اصلاح
+                    کم‌وکاستی‌های موجود در بازار داخلی تأسیس شد. تمرکز اصلی ما بر تنظیم دقیق پارامترهای فنی، از جمله
+                    <strong>EC (شوری خاک)</strong> است تا بهره‌وری سالن‌های پرورش را به بالاترین درجه ممکن برسانیم.
+                </p>
+                <div class="guarantee-card">
+                    <i data-lucide="shield-check"></i>
+                    <p>خرید از ورگا، آغاز یک تعهد است. تمامی محصولات با <strong>تضمین کیفیت و پشتیبانی فنی مستقیم مهندس
+                            میرشفیعی</strong> تا پایان مراحل تولید همراه هستند.</p>
+                </div>
+                <p class="slogan">«کیفیت آغاز تعهد ماست»</p>
+            </div>
+        </div>
+    </section>
+
     <section id="factory" class="factory-info">
         <div class="container grid-2">
             <div class="factory-image">
-                <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&q=80&w=800" alt="Factory Equipment" class="rounded-img shadow-lg">
+                <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&q=80&w=800"
+                    alt="Factory Equipment" class="rounded-img shadow-lg">
             </div>
             <div class="factory-content">
                 <h2 class="section-title text-right">قلب تپنده ورگا: کارخانه ملارد</h2>
-                <p>کارخانه ورگا در منطقه ملارد، یکی از قطب‌های اصلی تولید قارچ کشور، مستقر است. ما با بهره‌گیری از تجهیزات مدرن و تمام‌اتوماتیک، استانداردهای جدیدی در تولید خاک پوششی بنا نهاده‌ایم.</p>
+                <p>کارخانه ورگا در منطقه ملارد، یکی از قطب‌های اصلی تولید قارچ کشور، مستقر است. ما با بهره‌گیری از
+                    تجهیزات مدرن و تمام‌اتوماتیک، استانداردهای جدیدی در تولید خاک پوششی بنا نهاده‌ایم.</p>
                 <div class="process-list">
                     <div class="process-item">
                         <i data-lucide="check-circle" class="accent"></i>
-                        <span><strong>پاستوریزاسیون دقیق:</strong> نابودی پاتوژن‌ها و حفظ باکتری‌های مفید (Pseudomonas) برای عملکرد حداکثری.</span>
+                        <span><strong>پاستوریزاسیون دقیق:</strong> نابودی پاتوژن‌ها و حفظ باکتری‌های مفید (Pseudomonas)
+                            برای عملکرد حداکثری.</span>
                     </div>
                     <div class="process-item">
                         <i data-lucide="check-circle" class="accent"></i>
-                        <span><strong>تجهیزات ضدعفونی:</strong> محیطی کاملاً ایزوله برای جلوگیری از ورود هرگونه آلودگی ثانویه.</span>
+                        <span><strong>تجهیزات ضدعفونی:</strong> محیطی کاملاً ایزوله برای جلوگیری از ورود هرگونه آلودگی
+                            ثانویه.</span>
                     </div>
                     <div class="process-item">
                         <i data-lucide="check-circle" class="accent"></i>
-                        <span><strong>بسته‌بندی استاندارد:</strong> حفظ کیفیت و رطوبت خاک تا لحظه استفاده در سالن‌های پرورش.</span>
+                        <span><strong>بسته‌بندی استاندارد:</strong> حفظ کیفیت و رطوبت خاک تا لحظه استفاده در سالن‌های
+                            پرورش.</span>
                     </div>
                 </div>
             </div>
@@ -116,23 +155,27 @@
                 <h3>لوکیشن و دسترسی</h3>
                 <p>ملارد، جنب کارخانه قارچ ملارد</p>
                 <div class="map-placeholder">
-                    <a href="https://share.google/CWSvN8aIB25FIIMmQ" target="_blank" class="map-btn">
+                    <a href="https://maps.app.goo.gl/QivtkqkbZT9kbUij9" target="_blank" class="map-btn">
                         <i data-lucide="map-pin"></i>
                         مشاهده روی نقشه گوگل
                     </a>
                 </div>
             </div>
             <div class="contact-info">
-                <h2>آماده همکاری با سالن‌داران سراسر کشور</h2>
-                <p>برای مشاوره تخصصی و ثبت سفارش عمده با ما در تماس باشید.</p>
+                <h2>مشاوره تخصصی و ثبت سفارش</h2>
+                <p>برای ارتباط مستقیم با مهندس میرشفیعی و پیوستن به شبکه‌های تخصصی ما:</p>
                 <div class="contact-grid">
                     <div class="c-item">
                         <i data-lucide="phone"></i>
-                        <span>۰۹۱۲-XXX-XXXX</span>
+                        <span>تماس مستقیم: ۰۹۱۲-XXX-XXXX</span>
                     </div>
                     <div class="c-item">
-                        <i data-lucide="mail"></i>
-                        <span>info@verga.com</span>
+                        <i data-lucide="send"></i>
+                        <a href="https://t.me/mushroomproduction" target="_blank">کانال تلگرام</a>
+                    </div>
+                    <div class="c-item">
+                        <i data-lucide="users"></i>
+                        <a href="https://t.me/GharcheSoltan" target="_blank">گروه تخصصی</a>
                     </div>
                 </div>
             </div>
@@ -154,4 +197,5 @@
         lucide.createIcons();
     </script>
 </body>
+
 </html>
