Update contact phone numbers

--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
                 <div class="contact-grid">
                     <div class="c-item">
                         <i data-lucide="phone"></i>
-                        <span>تماس مستقیم: ۰۹۱۲-XXX-XXXX</span>
+                        <div class="phone-numbers">
+                            <span>۰۹۳۷-۲۸۷-۳۲۹۷</span>
+                            <span>۰۹۲۱-۲۸۷-۳۲۹۷</span>
+                        </div>
                     </div>
                     <div class="c-item">
                         <i data-lucide="send"></i>
