--- a/index.html
+++ b/index.html
@@ -21,8 +21,18 @@
     <nav class="navbar">
         <div class="container navbar-content">
             <div class="logo">
-                <span class="logo-text">V E R G A</span>
-                <span class="logo-sub">وِرگـا</span>
+                <div class="logo-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path
+                            d="M12 2C8.5 2 6 4.5 6 8c0 2 1 3 2 4v8a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2v-8c1-1 2-2 2-4 0-3.5-2.5-6-6-6z" />
+                        <path d="M10 14h4" />
+                    </svg>
+                </div>
+                <div class="logo-text-wrapper">
+                    <span class="logo-text">V E R G A</span>
+                    <span class="logo-sub">وِرگـا</span>
+                </div>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">صفحه اصلی</a></li>
@@ -60,8 +70,8 @@
             </div>
             <div class="hero-visual">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1504198453319-5ce911baf2ef?auto=format&fit=crop&q=80&w=800"
-                        alt="Mushroom Growing" class="floating-img">
+                    <img src="https://images.unsplash.com/photo-1478145046317-39f10e56b5e9?auto=format&fit=crop&q=80&w=800"
+                        alt="قارچ دکمه‌ای تازه" class="floating-img">
                 </div>
             </div>
         </div>
@@ -95,7 +105,7 @@
     <section id="founder" class="founder-section">
         <div class="container grid-2">
             <div class="founder-image">
-                <img src="https://images.unsplash.com/photo-1556761175-b413da4baf72?auto=format&fit=crop&q=80&w=800"
+                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&q=80&w=800"
                     alt="مهندس سید فرشید میرشفیعی" class="rounded-img shadow-lg">
             </div>
             <div class="founder-content">
@@ -121,8 +131,8 @@
     <section id="factory" class="factory-info">
         <div class="container grid-2">
             <div class="factory-image">
-                <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&q=80&w=800"
-                    alt="Factory Equipment" class="rounded-img shadow-lg">
+                <img src="https://images.unsplash.com/photo-1565193566173-7a0ee3dbe261?auto=format&fit=crop&q=80&w=800"
+                    alt="تجهیزات کارخانه ورگا" class="rounded-img shadow-lg">
             </div>
             <div class="factory-content">
                 <h2 class="section-title text-right">قلب تپنده ورگا: کارخانه ملارد</h2>
