--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
     <nav class="navbar">
+        <div class="mobile-menu-overlay"></div>
         <div class="container navbar-content">
             <div class="logo">
                 <div class="logo-icon">
@@ -43,6 +44,11 @@
             </ul>
             <div class="nav-cta">
                 <a href="#contact" class="btn btn-primary">ثبت سفارش</a>
+            </div>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
     </nav>
@@ -70,8 +76,8 @@
             </div>
             <div class="hero-visual">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1478145046317-39f10e56b5e9?auto=format&fit=crop&q=80&w=800"
-                        alt="قارچ دکمه‌ای تازه" class="floating-img">
+                    <img src="https://images.unsplash.com/photo-1580913428706-c311e67898b3?auto=format&fit=crop&q=80&w=800"
+                        alt="قارچ دکمه‌ای تازه در خاک پوششی" class="floating-img">
                 </div>
             </div>
         </div>
