Add new gallery section and real mushroom images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </nav>
 
-    <section id="home" class="hero">
+    <section id="home" class="hero hero-bg-image">
         <div class="hero-overlay"></div>
         <div class="container hero-container">
             <div class="hero-content">
@@ -76,8 +76,8 @@
             </div>
             <div class="hero-visual">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1580913428706-c311e67898b3?auto=format&fit=crop&q=80&w=800"
-                        alt="قارچ دکمه‌ای تازه در خاک پوششی" class="floating-img">
+                    <img src="https://images.unsplash.com/photo-1595123550441-d377e017de2d?auto=format&fit=crop&q=80&w=800"
+                        alt="قارچ دکمه‌ای سفید و تازه" class="floating-img">
                 </div>
             </div>
         </div>
@@ -103,6 +103,53 @@
                     <i data-lucide="thermometer-sun"></i>
                     <h3>تحریک بیولوژیک</h3>
                     <p>ایجاد سیگنال‌های محیطی برای ورود میسلیوم از فاز رویشی به فاز زایشی (تولید قارچ).</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- New Gallery Section -->
+    <section id="gallery" class="gallery-section">
+        <div class="container text-center">
+            <h2 class="section-title">گالری تصاویر تخصصی</h2>
+            <p class="section-desc">نگاهی دقیق به کیفیت خاک پوششی ورگا و محصولات تولیدی</p>
+
+            <div class="gallery-grid">
+                <!-- Casing Soil Texture -->
+                <div class="gallery-item">
+                    <img src="https://images.unsplash.com/photo-1466692476868-aef1dfb1e735?auto=format&fit=crop&q=80&w=600"
+                        alt="بافت خاک پوششی مرغوب">
+                    <div class="gallery-overlay">
+                        <h4>بافت استاندارد خاک</h4>
+                        <p>تخلخل عالی و نگهداری رطوبت بالا</p>
+                    </div>
+                </div>
+                <!-- Mushrooms Growing -->
+                <div class="gallery-item">
+                    <img src="https://images.unsplash.com/photo-1626202378873-10af67cb036d?auto=format&fit=crop&q=80&w=600"
+                        alt="قارچ دکمه‌ای در بستر خاک">
+                    <div class="gallery-overlay">
+                        <h4>باردهی عالی</h4>
+                        <p>بستر مناسب برای رشد قارچ‌های درجه یک</p>
+                    </div>
+                </div>
+                <!-- Production/Compost -->
+                <div class="gallery-item">
+                    <img src="https://images.unsplash.com/photo-1615811361523-6bd03c770c1c?auto=format&fit=crop&q=80&w=600"
+                        alt="فرآیند تولید خاک">
+                    <div class="gallery-overlay">
+                        <h4>تولید مکانیزه</h4>
+                        <p>فرآوری خاک با دستگاه‌های پیشرفته</p>
+                    </div>
+                </div>
+                <!-- Close up Mushroom -->
+                <div class="gallery-item">
+                    <img src="https://images.unsplash.com/photo-1504472478978-b0798eb4851f?auto=format&fit=crop&q=80&w=600"
+                        alt="کیفیت قارچ نهایی">
+                    <div class="gallery-overlay">
+                        <h4>محصول نهایی</h4>
+                        <p>سفیدی و تراکم بافت قارچ</p>
+                    </div>
                 </div>
             </div>
         </div>
