Update contact section with clickable phone links and telegram details

--- a/index.html
+++ b/index.html
@@ -231,17 +231,21 @@
                     <div class="c-item">
                         <i data-lucide="phone"></i>
                         <div class="phone-numbers">
-                            <span>۰۹۳۷-۲۸۷-۳۲۹۷</span>
-                            <span>۰۹۲۱-۲۸۷-۳۲۹۷</span>
+                            <a href="tel:+989372873297" dir="ltr">0937-287-3297</a>
+                            <a href="tel:+989212873297" dir="ltr">0921-287-3297</a>
                         </div>
                     </div>
                     <div class="c-item">
                         <i data-lucide="send"></i>
-                        <a href="https://t.me/mushroomproduction" target="_blank">کانال تلگرام</a>
+                        <div class="social-text">
+                            <a href="https://t.me/verga_casing_soil" target="_blank">مشاوره آنلاین تلگرام <span
+                                    class="vpn-note">(با قند شکن روشن)</span></a>
+                            <p class="msg-hint">برای راهنمایی بهتر پیام دهید: «من از طریق سایت ورگا پیام میدهم»</p>
+                        </div>
                     </div>
                     <div class="c-item">
                         <i data-lucide="users"></i>
-                        <a href="https://t.me/GharcheSoltan" target="_blank">گروه تخصصی</a>
+                        <a href="https://t.me/GharcheSoltan" target="_blank">عضویت در گروه تخصصی</a>
                     </div>
                 </div>
             </div>
