Complete rebranding with new logo, technical specs from image, and visual improvements

--- a/index.html
+++ b/index.html
@@ -22,23 +22,28 @@
         <div class="mobile-menu-overlay"></div>
         <div class="container navbar-content">
             <div class="logo">
-                <div class="logo-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path
-                            d="M12 2C8.5 2 6 4.5 6 8c0 2 1 3 2 4v8a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2v-8c1-1 2-2 2-4 0-3.5-2.5-6-6-6z" />
-                        <path d="M10 14h4" />
+                <div class="logo-icon logo-custom-style">
+                    <!-- SVG inspired by the uploaded logo -->
+                    <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="50" cy="50" r="45" fill="none" stroke="#666" stroke-width="2"
+                            stroke-dasharray="140 140" stroke-linecap="round" transform="rotate(-40 50 50)" />
+                        <path d="M30 45 Q 50 15 70 45" fill="#e74c3c" />
+                        <circle cx="40" cy="30" r="3" fill="white" />
+                        <circle cx="50" cy="25" r="3" fill="white" />
+                        <circle cx="60" cy="35" r="3" fill="white" />
+                        <path d="M35 45 L 65 45 Q 65 55 55 75 L 45 75 Q 35 55 35 45" fill="#333" />
+                        <path d="M40 45 L 60 45" stroke="white" stroke-width="1" />
                     </svg>
                 </div>
                 <div class="logo-text-wrapper">
-                    <span class="logo-text">V E R G A</span>
-                    <span class="logo-sub">وِرگـا</span>
+                    <span class="logo-text">VERGA Casing Soil</span>
+                    <span class="logo-sub">خاک پوششی ورگا</span>
                 </div>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">صفحه اصلی</a></li>
-                <li><a href="#about">خاک پوششی چیست؟</a></li>
-                <li><a href="#founder">درباره ما</a></li>
+                <li><a href="#about">ویژگی‌های فنی</a></li>
+                <li><a href="#gallery">گالری</a></li>
                 <li><a href="#factory">کارخانه</a></li>
                 <li><a href="#contact">تماس با ما</a></li>
             </ul>
@@ -58,26 +63,26 @@
         <div class="container hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">توازن طبیعت و تکنولوژی در <span class="accent">ورگا</span></h1>
-                <p class="hero-subtitle">تولیدکننده تخصصی خاک پوششی قارچ با استانداردهای جهانی و فرآیند پاستوریزاسیون
-                    پیشرفته.</p>
+                <p class="hero-subtitle">تولیدکننده تخصصی خاک پوششی قارچ با استانداردهای جهانی و ضمانت کیفیت ۱۰۰٪.</p>
                 <div class="hero-meaning">
                     <div class="meaning-icon">
-                        <i data-lucide="droplets"></i>
+                        <i data-lucide="shield-check"></i>
                     </div>
                     <div class="meaning-text">
-                        <strong>معنای ورگا:</strong> در گویش اصیل خوانساری (پهلوی)، ورگا به معنی محل تقسیم آب از جوی
-                        اصلی به فرعی در زمین‌های کشاورزی است؛ نقطه‌ای حیاتی برای حیات و رشد.
+                        <strong>چرا ورگا؟</strong> پاستوریزاسیون ویژه، مقادیر EC و PH کاملاً استاندارد و ساختاری مهندسی
+                        شده برای بالاترین راندمان برداشت.
                     </div>
                 </div>
                 <div class="hero-btns">
-                    <a href="#factory" class="btn btn-primary">مشاهده فرآیند تولید</a>
-                    <a href="#about" class="btn btn-secondary">درباره محصول</a>
+                    <a href="#gallery" class="btn btn-primary">مشاهده نمونه محصول</a>
+                    <a href="#about" class="btn btn-secondary">مشخصات فنی</a>
                 </div>
             </div>
             <div class="hero-visual">
                 <div class="image-card">
+                    <!-- Photo inspired by the second uploaded image -->
                     <img src="https://images.unsplash.com/photo-1595123550441-d377e017de2d?auto=format&fit=crop&q=80&w=800"
-                        alt="قارچ دکمه‌ای سفید و تازه" class="floating-img">
+                        alt="بستر کشت قارچ دکمه‌ای ورگا" class="floating-img">
                 </div>
             </div>
         </div>
@@ -85,24 +90,25 @@
 
     <section id="about" class="features">
         <div class="container text-center">
-            <h2 class="section-title">خاک پوششی؛ فراتر از یک بستر ساده</h2>
-            <p class="section-desc">خاک پوششی منبع تغذیه نیست، بلکه محیطی استراتژیک برای تحریک قارچ به باردهی است.</p>
+            <h2 class="section-title">ویژگی‌های منحصر‌به‌فرد خاک ورگا</h2>
+            <p class="section-desc">فرمولاسیون اختصاصی تحت نظارت مستقیم مهندس میرشفیعی با تکیه بر دانش معدن و کشاورزی.
+            </p>
 
             <div class="features-grid">
                 <div class="feature-card">
-                    <i data-lucide="waves"></i>
-                    <h3>تنظیم رطوبت</h3>
-                    <p>ذخیره و مدیریت آب برای جلوگیری از خشک شدن میسلیوم و تامین رطوبت مورد نیاز رشد قارچ.</p>
+                    <i data-lucide="droplets"></i>
+                    <h3>جذب آب فوق‌العاده</h3>
+                    <p>نگهداری رطوبت در لایه‌های عمقی خاک برای جلوگیری از تنش آبی به میسلیوم در طول دوره رشد.</p>
                 </div>
                 <div class="feature-card">
-                    <i data-lucide="wind"></i>
-                    <h3>تبادل گازها</h3>
-                    <p>ساختار متخلخل برای جابجایی بهینه اکسیژن و دی‌اکسید کربن در مرحله حیاتی پین‌دهی.</p>
+                    <i data-lucide="activity"></i>
+                    <h3>EC و PH استاندارد</h3>
+                    <p>تنظیم دقیق شوری و اسیدیته خاک متناسب با نیاز نژادهای مختلف قارچ دکمه‌ای (رومانی، کینگ و ...).</p>
                 </div>
                 <div class="feature-card">
-                    <i data-lucide="thermometer-sun"></i>
-                    <h3>تحریک بیولوژیک</h3>
-                    <p>ایجاد سیگنال‌های محیطی برای ورود میسلیوم از فاز رویشی به فاز زایشی (تولید قارچ).</p>
+                    <i data-lucide="thermometer"></i>
+                    <h3>پاستوریزاسیون ویژه</h3>
+                    <p>حذف کامل عوامل بیماری‌زا و پاتوژن‌ها بدون از بین بردن باکتری‌های مفید محرک باردهی.</p>
                 </div>
             </div>
         </div>
