--- a/index.html
+++ b/index.html
@@ -22,18 +22,8 @@
         <div class="mobile-menu-overlay"></div>
         <div class="container navbar-content">
             <div class="logo">
-                <div class="logo-icon logo-custom-style">
-                    <!-- SVG inspired by the uploaded logo -->
-                    <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="50" cy="50" r="45" fill="none" stroke="#666" stroke-width="2"
-                            stroke-dasharray="140 140" stroke-linecap="round" transform="rotate(-40 50 50)" />
-                        <path d="M30 45 Q 50 15 70 45" fill="#e74c3c" />
-                        <circle cx="40" cy="30" r="3" fill="white" />
-                        <circle cx="50" cy="25" r="3" fill="white" />
-                        <circle cx="60" cy="35" r="3" fill="white" />
-                        <path d="M35 45 L 65 45 Q 65 55 55 75 L 45 75 Q 35 55 35 45" fill="#333" />
-                        <path d="M40 45 L 60 45" stroke="white" stroke-width="1" />
-                    </svg>
+                <div class="logo-icon">
+                    <img src="images/logo.png" alt="لوگو ورگا">
                 </div>
                 <div class="logo-text-wrapper">
                     <span class="logo-text">VERGA Casing Soil</span>
@@ -66,11 +56,11 @@
                 <p class="hero-subtitle">تولیدکننده تخصصی خاک پوششی قارچ با استانداردهای جهانی و ضمانت کیفیت ۱۰۰٪.</p>
                 <div class="hero-meaning">
                     <div class="meaning-icon">
-                        <i data-lucide="shield-check"></i>
+                        <i data-lucide="shield-check" class="accent"></i>
                     </div>
                     <div class="meaning-text">
-                        <strong>چرا ورگا؟</strong> پاستوریزاسیون ویژه، مقادیر EC و PH کاملاً استاندارد و ساختاری مهندسی
-                        شده برای بالاترین راندمان برداشت.
+                        <strong>چرا ورگا؟</strong> پاستوریزاسیون ویژه، مقادیر EC و PH کاملاً استاندارد و جذب آب
+                        فوق‌العاده برای بالاترین راندمان برداشت.
                     </div>
                 </div>
                 <div class="hero-btns">
@@ -80,9 +70,7 @@
             </div>
             <div class="hero-visual">
                 <div class="image-card">
-                    <!-- Photo inspired by the second uploaded image -->
-                    <img src="https://images.unsplash.com/photo-1595123550441-d377e017de2d?auto=format&fit=crop&q=80&w=800"
-                        alt="بستر کشت قارچ دکمه‌ای ورگا" class="floating-img">
+                    <img src="images/mushrooms-real.png" alt="بستر کشت قارچ دکمه‌ای ورگا" class="floating-img">
                 </div>
             </div>
         </div>
@@ -121,13 +109,12 @@
             <p class="section-desc">نگاهی دقیق به کیفیت خاک پوششی ورگا و محصولات تولیدی</p>
 
             <div class="gallery-grid">
-                <!-- Casing Soil Texture -->
+                <!-- Real Image 1 -->
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1589923188900-85dae523342b?auto=format&fit=crop&q=80&w=800"
-                        alt="بافت خاک پوششی مرغوب">
+                    <img src="images/mushrooms-real.png" alt="بافت خاک پوششی مرغوب">
                     <div class="gallery-overlay">
                         <h4>بافت استاندارد خاک</h4>
-                        <p>تخلخل عالی و نگهداری رطوبت بالا</p>
+                        <p>توضیحات فنی: تخلخل عالی و نگهداری رطوبت بالا</p>
                     </div>
                 </div>
                 <!-- Mushrooms Growing -->
