Update SEO keywords, add encyclopedia section, and update founder image

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ورگا | تولیدکننده تخصصی خاک پوششی قارچ</title>
+    <title>خاک پوششی ورگا | تولید خاک پوششی قارچ دکمه‌ای و مکمل کمپوست</title>
     <meta name="description"
-        content="برند ورگا، پیشرو در تولید خاک پوششی پاستوریزه و استریل برای پرورش قارچ با بهره‌گیری از تکنولوژی‌های روز دنیا.">
+        content="خرید خاک پوششی ورگا؛ تولیدکننده بهترین خاک پوششی قارچ دکمه‌ای در ملارد. مکمل ایده‌آل انواع کمپوست، پاستوریزه، با جذب آب بالا و EC/PH استاندارد.">
+    <meta name="keywords"
+        content="خاک پوششی, خاک پوششی قارچ, خاک پوششی قارچ دکمه ای, کمپوست, خرید خاک پوششی, قیمت خاک پوششی, خاک پوششی ملارد, خاک ورگا, پرورش قارچ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -34,6 +36,7 @@
                 <li><a href="#home">صفحه اصلی</a></li>
                 <li><a href="#about">ویژگی‌های فنی</a></li>
                 <li><a href="#gallery">گالری</a></li>
+                <li><a href="#articles">دانشنامه</a></li>
                 <li><a href="#factory">کارخانه</a></li>
                 <li><a href="#contact">تماس با ما</a></li>
             </ul>
@@ -52,8 +55,9 @@
         <div class="hero-overlay"></div>
         <div class="container hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">توازن طبیعت و تکنولوژی در <span class="accent">ورگا</span></h1>
-                <p class="hero-subtitle">تولیدکننده تخصصی خاک پوششی قارچ با استانداردهای جهانی و ضمانت کیفیت ۱۰۰٪.</p>
+                <h1 class="hero-title">تولید تخصصی <span class="accent">خاک پوششی قارچ دکمه‌ای</span> ورگا</h1>
+                <p class="hero-subtitle">ارائه‌دهنده باکیفیت‌ترین خاک پوششی پاستوریزه، مکمل ایده‌آل انواع کمپوست با
+                    ضمانت کیفیت ۱۰۰٪.</p>
                 <div class="hero-meaning">
                     <div class="meaning-icon">
                         <i data-lucide="shield-check" class="accent"></i>
@@ -91,7 +95,8 @@
                 <div class="feature-card">
                     <i data-lucide="activity"></i>
                     <h3>EC و PH استاندارد</h3>
-                    <p>تنظیم دقیق شوری و اسیدیته خاک متناسب با نیاز نژادهای مختلف قارچ دکمه‌ای (رومانی، کینگ و ...).</p>
+                    <p>تنظیم دقیق شوری و اسیدیته خاک متناسب با نیاز نژادهای مختلف قارچ دکمه‌ای و سازگاری کامل با آنالیز
+                        انواع کمپوست.</p>
                 </div>
                 <div class="feature-card">
                     <i data-lucide="thermometer"></i>
@@ -111,7 +116,7 @@
             <div class="gallery-grid">
                 <!-- Real Image 1 -->
                 <div class="gallery-item">
-                    <img src="images/mushrooms-real.png" alt="بافت خاک پوششی مرغوب">
+                    <img src="images/mushrooms-real.png" alt="خاک پوششی باکیفیت ورگا">
                     <div class="gallery-overlay">
                         <h4>بافت استاندارد خاک</h4>
                         <p>توضیحات فنی: تخلخل عالی و نگهداری رطوبت بالا</p>
@@ -120,7 +125,7 @@
                 <!-- Mushrooms Growing -->
                 <div class="gallery-item">
                     <img src="https://images.unsplash.com/photo-1595123550411-9a74287895f3?auto=format&fit=crop&q=80&w=800"
-                        alt="قارچ دکمه‌ای در بستر خاک">
+                        alt="رشد قارچ روی خاک پوششی">
                     <div class="gallery-overlay">
                         <h4>باردهی عالی</h4>
                         <p>بستر مناسب برای رشد قارچ‌های درجه یک</p>
@@ -129,7 +134,7 @@
                 <!-- Production/Compost -->
                 <div class="gallery-item">
                     <img src="https://images.unsplash.com/photo-1615811361523-6bd03c770c1c?auto=format&fit=crop&q=80&w=600"
-                        alt="فرآیند تولید خاک">
+                        alt="فرآیند تولید خاک پوششی پاستوریزه">
                     <div class="gallery-overlay">
                         <h4>تولید مکانیزه</h4>
                         <p>فرآوری خاک با دستگاه‌های پیشرفته</p>
@@ -138,7 +143,7 @@
                 <!-- Close up Mushroom -->
                 <div class="gallery-item">
                     <img src="https://images.unsplash.com/photo-1478145046317-39f10e56b5e9?auto=format&fit=crop&q=80&w=800"
-                        alt="کیفیت قارچ نهایی">
+                        alt="قارچ با کیفیت بالا در بستر ورگا">
                     <div class="gallery-overlay">
                         <h4>محصول نهایی</h4>
                         <p>سفیدی و تراکم بافت قارچ</p>
@@ -151,8 +156,7 @@
     <section id="founder" class="founder-section">
         <div class="container grid-2">
             <div class="founder-image">
-                <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?auto=format&fit=crop&q=80&w=800"
-                    alt="مهندس سید فرشید میرشفیعی" class="rounded-img shadow-lg">
+                <img src="images/founder.jpg" alt="مهندس سید فرشید میرشفیعی" class="rounded-img shadow-lg">
             </div>
             <div class="founder-content">
                 <h2 class="section-title text-right">درباره مؤسس و هدف ورگا</h2>
@@ -170,6 +174,71 @@
                             میرشفیعی</strong> تا پایان مراحل تولید همراه هستند.</p>
                 </div>
                 <p class="slogan">«کیفیت آغاز تعهد ماست»</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="articles" class="articles-section">
+        <div class="container">
+            <h2 class="section-title text-center">دانشنامه ورگا: مقالات تخصصی</h2>
+            <p class="section-desc text-center">راهنمای جامع تولید کمپوست، پرورش قارچ و راه‌اندازی سالن.</p>
+
+            <div class="articles-grid">
+                <!-- Article 1: Compost -->
+                <article class="article-card">
+                    <div class="article-image">
+                        <img src="https://images.unsplash.com/photo-1621460541634-192376997233?auto=format&fit=crop&q=80&w=400"
+                            alt="تولید کمپوست قارچ">
+                    </div>
+                    <div class="article-content">
+                        <h3>تولید کمپوست: از فاز ۱ تا فاز ۲</h3>
+                        <p>فاز ۱ شامل خیساندن و تخمیر هوای آزاد مواد اولیه (کلش گندم و کود مرغی) است. در فاز ۲، کمپوست
+                            در تونل‌های پاستوریزه کاملاً استریل شده و آماده بذر زنی می‌شود.</p>
+                        <a href="#" class="read-more">مطالعه بیشتر <i data-lucide="chevron-left"></i></a>
+                    </div>
+                </article>
+
+                <!-- Article 2: Cultivation Steps -->
+                <article class="article-card">
+                    <div class="article-image">
+                        <img src="https://images.unsplash.com/photo-1595123550411-9a74287895f3?auto=format&fit=crop&q=80&w=400"
+                            alt="مراحل پرورش قارچ">
+                    </div>
+                    <div class="article-content">
+                        <h3>۷ مرحله اصلی پرورش قارچ</h3>
+                        <p>از اسپاون‌ران (رشد میسلیوم) و خاک‌دهی تا شوک‌دهی و برداشت. رعایت دقیق دما و رطوبت در هر مرحله
+                            رمز موفقیت شماست.</p>
+                        <a href="#" class="read-more">مطالعه بیشتر <i data-lucide="chevron-left"></i></a>
+                    </div>
+                </article>
+
+                <!-- Article 3: Traditional vs Industrial -->
+                <article class="article-card">
+                    <div class="article-image">
+                        <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&q=80&w=400"
+                            alt="پرورش قارچ صنعتی">
+                    </div>
+                    <div class="article-content">
+                        <h3>مقایسه پرورش سنتی و صنعتی</h3>
+                        <p>روش صنعتی با کنترل تمام‌اتوماتیک اقلیم، راندمان بالاتری دارد، در حالی که روش سنتی با هزینه
+                            کمتری قابل راه‌اندازی است اما نیاز به تجربه بیشتری دارد.</p>
+                        <a href="#" class="read-more">مطالعه بیشتر <i data-lucide="chevron-left"></i></a>
+                    </div>
+                </article>
+
+                <!-- Article 4: Traditional Setup -->
+                <article class="article-card">
+                    <div class="article-image">
+                        <img src="https://images.unsplash.com/photo-1594411132715-dd4469956697?auto=format&fit=crop&q=80&w=400"
+                            alt="راه اندازی سالن قارچ">
+                    </div>
+                    <div class="article-content">
+                        <h3>راهنمای راه‌اندازی سالن سنتی</h3>
+                        <p>برای شروع به فضای ایزوله، قفسه‌بندی، دستگاه رطوبت‌ساز و فن نیاز دارید. استفاده از خاک پوششی
+                            مرغوب در این روش برای کنترل رطوبت حیاتی است.</p>
+                        <a href="#" class="read-more">مطالعه بیشتر <i data-lucide="chevron-left"></i></a>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
