Change founder image path to farshid.jpg and push updates

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <section id="founder" class="founder-section">
         <div class="container grid-2">
             <div class="founder-image">
-                <img src="images/founder.jpg" alt="مهندس سید فرشید میرشفیعی" class="rounded-img shadow-lg">
+                <img src="images/farshid.jpg" alt="مهندس سید فرشید میرشفیعی" class="rounded-img shadow-lg">
             </div>
             <div class="founder-content">
                 <h2 class="section-title text-right">درباره مؤسس و هدف ورگا</h2>
