Create functional article pages in a dedicated directory and update knowledge hub links

--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
                         <h3>تولید کمپوست: از فاز ۱ تا فاز ۲</h3>
                         <p>فاز ۱ شامل خیساندن و تخمیر هوای آزاد مواد اولیه (کلش گندم و کود مرغی) است. در فاز ۲، کمپوست
                             در تونل‌های پاستوریزه کاملاً استریل شده و آماده بذر زنی می‌شود.</p>
-                        <a href="#" class="read-more">مطالعه بیشتر <i data-lucide="chevron-left"></i></a>
+                        <a href="articles/compost.html" target="_blank" class="read-more">مطالعه بیشتر <i
+                                data-lucide="chevron-left"></i></a>
                     </div>
                 </article>
 
@@ -208,7 +209,8 @@
                         <h3>۷ مرحله اصلی پرورش قارچ</h3>
                         <p>از اسپاون‌ران (رشد میسلیوم) و خاک‌دهی تا شوک‌دهی و برداشت. رعایت دقیق دما و رطوبت در هر مرحله
                             رمز موفقیت شماست.</p>
-                        <a href="#" class="read-more">مطالعه بیشتر <i data-lucide="chevron-left"></i></a>
+                        <a href="articles/cultivation-steps.html" target="_blank" class="read-more">مطالعه بیشتر <i
+                                data-lucide="chevron-left"></i></a>
                     </div>
                 </article>
 
@@ -222,7 +224,8 @@
                         <h3>مقایسه پرورش سنتی و صنعتی</h3>
                         <p>روش صنعتی با کنترل تمام‌اتوماتیک اقلیم، راندمان بالاتری دارد، در حالی که روش سنتی با هزینه
                             کمتری قابل راه‌اندازی است اما نیاز به تجربه بیشتری دارد.</p>
-                        <a href="#" class="read-more">مطالعه بیشتر <i data-lucide="chevron-left"></i></a>
+                        <a href="articles/traditional-vs-industrial.html" target="_blank" class="read-more">مطالعه بیشتر
+                            <i data-lucide="chevron-left"></i></a>
                     </div>
                 </article>
 
@@ -236,7 +239,8 @@
                         <h3>راهنمای راه‌اندازی سالن سنتی</h3>
                         <p>برای شروع به فضای ایزوله، قفسه‌بندی، دستگاه رطوبت‌ساز و فن نیاز دارید. استفاده از خاک پوششی
                             مرغوب در این روش برای کنترل رطوبت حیاتی است.</p>
-                        <a href="#" class="read-more">مطالعه بیشتر <i data-lucide="chevron-left"></i></a>
+                        <a href="articles/traditional-setup.html" target="_blank" class="read-more">مطالعه بیشتر <i
+                                data-lucide="chevron-left"></i></a>
                     </div>
                 </article>
             </div>
