Add real mushroom growth images and update homepage/gallery

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             </div>
             <div class="hero-visual">
                 <div class="image-card">
-                    <img src="images/mushrooms-real.png" alt="بستر کشت قارچ دکمه‌ای ورگا" class="floating-img">
+                    <img src="images/growth-2.jpg" alt="باردهی خیره‌کننده قارچ دکمه‌ای با خاک پوششی ورگا"
+                        class="floating-img">
                 </div>
             </div>
         </div>
@@ -116,22 +117,21 @@
             <div class="gallery-grid">
                 <!-- Real Image 1 -->
                 <div class="gallery-item">
-                    <img src="images/mushrooms-real.png" alt="خاک پوششی باکیفیت ورگا">
+                    <img src="images/growth-1.jpg" alt="اجرای خاک پوششی ورگا در سالن">
                     <div class="gallery-overlay">
-                        <h4>بافت استاندارد خاک</h4>
-                        <p>توضیحات فنی: تخلخل عالی و نگهداری رطوبت بالا</p>
+                        <h4>تضمین باردهی</h4>
+                        <p>نمونه عینی رشد متراکم و با کیفیت قارچ ورگا</p>
                     </div>
                 </div>
-                <!-- Mushrooms Growing -->
+                <!-- Real Image 2 -->
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1595123550411-9a74287895f3?auto=format&fit=crop&q=80&w=800"
-                        alt="رشد قارچ روی خاک پوششی">
+                    <img src="images/growth-2.jpg" alt="برداشت قارچ دکمه‌ای درجه یک">
                     <div class="gallery-overlay">
-                        <h4>باردهی عالی</h4>
-                        <p>بستر مناسب برای رشد قارچ‌های درجه یک</p>
+                        <h4>بافت استاندارد</h4>
+                        <p>تراکم بی‌نظیر قارچ در بستر کشت</p>
                     </div>
                 </div>
-                <!-- Production/Compost -->
+                <!-- Original / Stock fallback -->
                 <div class="gallery-item">
                     <img src="https://images.unsplash.com/photo-1615811361523-6bd03c770c1c?auto=format&fit=crop&q=80&w=600"
                         alt="فرآیند تولید خاک پوششی پاستوریزه">
