Update gallery and articles with real images of mycelium, racks, and pinheads

--- a/index.html
+++ b/index.html
@@ -131,22 +131,28 @@
                         <p>تراکم بی‌نظیر قارچ در بستر کشت</p>
                     </div>
                 </div>
-                <!-- Original / Stock fallback -->
+                <!-- Real Image 3 -->
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1615811361523-6bd03c770c1c?auto=format&fit=crop&q=80&w=600"
-                        alt="فرآیند تولید خاک پوششی پاستوریزه">
+                    <img src="images/mycelium.jpg" alt="نفوذ میسلیوم در خاک ورگا">
                     <div class="gallery-overlay">
-                        <h4>تولید مکانیزه</h4>
-                        <p>فرآوری خاک با دستگاه‌های پیشرفته</p>
+                        <h4>نفوذ عالی میسلیوم</h4>
+                        <p>تخلخل استاندارد خاک جهت تنفس بهتر قارچ</p>
                     </div>
                 </div>
-                <!-- Close up Mushroom -->
+                <!-- Real Image 4 -->
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1478145046317-39f10e56b5e9?auto=format&fit=crop&q=80&w=800"
-                        alt="قارچ با کیفیت بالا در بستر ورگا">
+                    <img src="images/racks.jpg" alt="سالن پرورش قارچ دکمه‌ای">
                     <div class="gallery-overlay">
-                        <h4>محصول نهایی</h4>
-                        <p>سفیدی و تراکم بافت قارچ</p>
+                        <h4>سالن‌های مجهز</h4>
+                        <p>نمای کلی از قفسه‌بندی و باردهی همزمان</p>
+                    </div>
+                </div>
+                <!-- Real Image 5 -->
+                <div class="gallery-item">
+                    <img src="images/pinheads.jpg" alt="تشکیل پین‌های قارچ">
+                    <div class="gallery-overlay">
+                        <h4>مرحله تشکیل پین</h4>
+                        <p>ظهور بی‌نظیر اندام‌های باردهی روی سطح خاک</p>
                     </div>
                 </div>
             </div>
